--- a/configs/reader.toml
+++ b/configs/reader.toml
@@ -1,2 +1,3 @@
 log_level = "debug"
 ConnectionString = "postgres://postgres:596run49@localhost/postgres?sslmode=disable"
+ftp_connect = "ftp.zakupki.gov.ru:21"
