--- a/configs/reader.toml
+++ b/configs/reader.toml
@@ -1,3 +1,5 @@
 log_level = "debug"
-ConnectionString = "postgres://postgres:596run49@localhost/postgres?sslmode=disable"
+connection_string = "postgres://postgres:596run49@localhost/postgres?sslmode=disable"
 ftp_connect = "ftp.zakupki.gov.ru:21"
+root_directory = "/fcs_regions"
+doc_type = "notifications"
